@@ -8,6 +8,11 @@
 #  Auth: xx-Dec-2012, XXX         (xxx)
 #  Rev:  dd-mmm-yyyy, Reviewer's Name    (USERNAME)
 #--------------------------------------------------------------
+central_node_engine-R1-3-1:
+  * Change introduced in R1-2-5 stops MPS whenever the update thread
+    is stopped/started. Modified so it doesn't start MPS only after
+    loading a configuration the first time.
+
 central_node_engine-R1-3-0:
   * Addition of Firmware::beamFaultClear(), for clearing
     faults caused by power class or charge violation
